--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "captcha package for thinkphp5",
     "authors": [
         {
-            "name": "yunwuxin",
-            "email": "448901948@qq.com"
+            "name": "xuezhitech",
+            "email": "jinxuezhi@xuezhi.innfo"
         }
     ],
     "license": "Apache-2.0",
